
	Pidgin:
	* Support using the Page Up and Page Down keys on the numeric keypad in
	  the conversation window.  (Ryan Flegel) (#13127)
	* Fix a few memory leaks. (Nader Morshed) (#13162)
	* Support rendering strikethrough when received as in-line CSS. (#13168)

	Plugins:
	* The Voice/Video Settings plugin no longer resets selected devices to
	  defaults. (Jakub Adam) (#13044)
	* The Autoaccept plugin now allows disabling filename escaping. (Rok
	  Mandeljc) (half of #11459)
	* The Autoaccept plugin now allows choosing Reject/Ask/Accept for
	  non-buddies. (Rok Mandeljc) (half of #11459)

	QQ:
	* QQ2008 is now the default protocol version. (Michael Terry) (#11635)

	XMPP:
	* Don't crash when receiving an unexpected/invalid jingle transport type.
	  (Nikita Kozlov) (#13136)
	* Handle Connection: Close headers for BOSH, when the server does not
	  terminate the connection itself. (#13008)

	Yahoo!/Yahoo! JAPAN:
	* Fix a crash when an account disconnects before a p2p session is
	  completely set up. (Jan Kaluza) (#12432)

version 2.7.9 (12/26/2010):
	MSN:
	* Fix CVE-2010-4528, a crash when receiving short packets related to
	  P2Pv2 messages.

version 2.7.8 (12/19/2010):
	General:
	* Fix the exceptions in purple-remote on Python 2.6+. (Ari Pollak)
	  (#12151)

	Pidgin:
	* When a conversation has reached the maximum limit on the number
	  of smileys, display the text representation of the smiley properly
	  when it contains HTML-escapable characters (e.g. "<3" was previously
	  displayed as "&lt;3").
	* Drop dependency on GdkGC and use Cairo instead.
	* New UI hack to assist in first-time setup of Facebook accounts with
	  icon from Jakub Szypulka.
	* Don't hide the buddy list if there is no notification area in which
	  to put the icon. (#12129)

	libpurple:
	* Fix multipart parsing when '=' is included in the boundary for
	  purple_mime_document_parse. (Jakub Adam) (#11598)

	AIM and ICQ:
	* Buddies who unset their status message will now be correctly shown